--- a/.github/workflows/destory_preview_env.yml
+++ b/.github/workflows/destory_preview_env.yml
@@ -1,6 +1,9 @@
 name: Destroy Render Preview Environment
 
 on:
+  workflow_run:
+    workflows: ["Create Render Preview Environment"]
+    types: [completed]
   pull_request:
     types: [closed, merged]
 
@@ -8,11 +11,20 @@ jobs:
   destroy-preview:
     runs-on: ubuntu-latest
     steps:
+      - name: Download deploy ID artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: deploy-id
+          path: ./
+
       - name: Destroy Environment
         # This step needs logic to delete the specific service instance or namespace created for the PR.
         # As with the creation step, this is complex with basic Render setup.
         # A custom script would interact with the Render API to delete the service by ID.
         run: |
           echo "Destroying environment for PR ${{ github.event.pull_request.number }}"
-          # Example: A custom script 'delete-render-service.sh' would be called here
-          # ./delete-render-service.sh ${{ secrets.RENDER_API_KEY }} ${{ github.event.pull_request.number }}
+          DEPLOY_ID=$(cat deploy-id.txt)
+          echo "Using Deploy ID: $DEPLOY_ID"
+          # Cancel the deployment using the Render API
+          curl --request POST --url "api.render.com/$DEPLOY_ID/cancel" --header "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
+          
