--- a/.github/workflows/create_preview_env.yml
+++ b/.github/workflows/create_preview_env.yml
@@ -25,8 +25,9 @@ jobs:
           # First, check if service with this name already exists
           echo "Checking if service '$SERVICE_NAME' already exists..."
           LIST_RESPONSE=$(curl -s --request GET \
-            --url "https://api.render.com/v1/environments/$ENVIRONMENT_ID/services" \
+            --url "https://api.render.com/v1/services" \
             --header "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}")
+            --header 'Accept: application/json' \
           
           echo "Services list response:"
           echo "$LIST_RESPONSE"
@@ -38,8 +39,9 @@ jobs:
           else
             echo "Service '$SERVICE_NAME' does not exist, creating new one..."
             SERVICE_RESPONSE=$(curl -v --request POST \
-              --url "https://api.render.com/v1/environments/$ENVIRONMENT_ID/services" \
+              --url "https://api.render.com/v1/services" \
               --header "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+              --header 'Accept: application/json' \
               --header "Content-Type: application/json" \
               --data '{
                 "type": "static_site",
@@ -47,7 +49,8 @@ jobs:
                 "repo": "${{ github.event.pull_request.head.repo.clone_url }}",
                 "branch": "${{ github.head_ref }}",
                 "publishDirectory": "./dist",
-                "autoDeploy": false
+                "autoDeploy": false,
+                "environmentId": "'$ENVIRONMENT_ID'",
               }' 2>&1)
             
             echo "Service Response:"
