--- a/.github/workflows/create_preview_env.yml
+++ b/.github/workflows/create_preview_env.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
+    environment: Ephem
     steps:
       - name: Verify jq is installed
         run: jq --version
