--- a/.github/workflows/destory_preview_env.yml
+++ b/.github/workflows/destory_preview_env.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   destroy-preview:
     runs-on: ubuntu-latest
+    environment: Ephem
     steps:
       - name: Download service ID artifact
         uses: actions/download-artifact@v4
